--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "file-loader": "1.1.11",
     "flow-bin": "0.78.0",
     "prettier": "1.14.2",
+    "rollup": "0.64.1",
+    "rollup-plugin-babel": "4.0.0-beta.8",
+    "rollup-plugin-node-resolve": "3.3.0",
     "tap-spec": "5.0.0",
     "tape": "4.9.1",
     "webpack": "4.16.5",
@@ -29,6 +32,7 @@
     "webpack-dev-server": "3.1.5"
   },
   "scripts": {
+    "build": "rm -rf dist && rollup -c",
     "start": "webpack-dev-server --inline --devtool source-map -d --config ./script/webpack.config.js --port 8082",
     "test:browser": "NODE_ENV=test webpack-dev-server --port 3001 --mode development --config ./script/webpack.config.test.js",
     "test": "NODE_ENV=test babel-node ./src/__tests__/index.js | tap-spec"
