--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-jest": "23.4.2",
     "babel-loader": "8.0.0-beta.3",
     "babel-plugin-module-resolver": "3.1.1",
+    "babel-preset-minify": "^0.4.3",
     "browser-tap": "0.0.1",
     "file-loader": "1.1.11",
     "flow-bin": "0.78.0",
@@ -32,7 +33,7 @@
     "webpack-dev-server": "3.1.5"
   },
   "scripts": {
-    "build": "rm -rf dist && rollup -c",
+    "build": "./script/build.sh",
     "start": "webpack-dev-server --inline --devtool source-map -d --config ./script/webpack.config.js --port 8082",
     "test:browser": "NODE_ENV=test webpack-dev-server --port 3001 --mode development --config ./script/webpack.config.test.js",
     "test": "NODE_ENV=test babel-node ./src/__tests__/index.js | tap-spec"
