--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.4.2",
     "babel-loader": "8.0.0-beta.3",
+    "babel-plugin-minify-mangle-properties": "AshleyScirra/babel-plugin-minify-mangle-properties",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-preset-minify": "^0.4.3",
     "browser-tap": "0.0.1",
