--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,22 @@
 version: 2
+
+references:
+  workspace_root: &workspace_root /home/circleci/project
+
+  node_image: &node_image circleci/node:9.9
+
+  attach_workspace: &attach_workspace
+    attach_workspace:
+      at: *workspace_root
+
+  node_config: &node_config
+    docker:
+      - image: *node_image
+    working_directory: *workspace_root
+
 jobs:
   build:
-    docker:
-      - image: circleci/node:8.9
-    working_directory: ~/repo
-
+    <<: *node_config
     steps:
       - checkout
 
@@ -24,6 +36,23 @@ jobs:
 
       - run: yarn build
 
+  deploy:
+    <<: *node_config
+    steps:
+      - attach_workspace:
+          at: .
+
+      - run:
+          name: deploy
+          command: |
+            git config --global user.email bot@circleci.com
+            git config --global user.name circleci
+            cd dist
+            git init
+            git add .
+            git commit -m "Deploy to Github Pages"
+            git push --force --quiet "https://${GITHUB_TOKEN}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git" master:gh-pages > /dev/null 2>&1
+
 workflows:
   version: 2
   build-deploy:
@@ -32,3 +61,9 @@ workflows:
           filters:
             branches:
               ignore: gh-pages
+      - deploy:
+          filters:
+            branches:
+              only: master
+          requires:
+            - build
