--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "js13k-2018",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "gl-matrix": "2.7.1"
+  },
   "devDependencies": {
-    "@babel/cli": "7.0.0-rc.1",
-    "@babel/core": "7.0.0-rc.1",
-    "@babel/node": "7.0.0-rc.1",
-    "@babel/plugin-transform-modules-commonjs": "7.0.0-rc.1",
-    "@babel/preset-env": "7.0.0-rc.1",
-    "@babel/preset-flow": "7.0.0-rc.1",
+    "@babel/cli": "7.0.0-rc.2",
+    "@babel/core": "7.0.0-rc.2",
+    "@babel/node": "7.0.0-rc.2",
+    "@babel/plugin-transform-modules-commonjs": "7.0.0-rc.2",
+    "@babel/preset-env": "7.0.0-rc.2",
+    "@babel/preset-flow": "7.0.0-rc.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.0-beta.3",
     "babel-plugin-minify-mangle-properties": "AshleyScirra/babel-plugin-minify-mangle-properties",
     "babel-plugin-module-resolver": "3.1.1",
-    "babel-preset-minify": "^0.4.3",
+    "babel-preset-minify": "0.4.3",
     "browser-tap": "0.0.1",
-    "file-loader": "1.1.11",
-    "flow-bin": "0.78.0",
+    "file-loader": "2.0.0",
+    "flow-bin": "0.79.1",
+    "flow-typed": "2.5.1",
     "prettier": "1.14.2",
+    "raw-loader": "^0.5.1",
     "rollup": "0.64.1",
     "rollup-plugin-babel": "4.0.0-beta.8",
     "rollup-plugin-node-resolve": "3.3.0",
+    "rollup-plugin-string": "2.0.2",
     "tap-spec": "5.0.0",
     "tape": "4.9.1",
-    "webpack": "4.16.5",
+    "webpack": "4.17.1",
     "webpack-assets-manifest": "3.0.2",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.5"
